Updated scripts for jdk11